--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
     <h1>War of Krasnogorsk</h1>
-    <button>log in</button>
-    <button>register</button>
+    {% block f_p %}{% endblock %}
     {% block content %}{% endblock %}
 </body>
 </html>
