Made the registration and login page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block f_p %}
+{% block content %}
     <div>
         <a href="/login" class="btn btn-warning">
             Log in
