Slight changes in templates

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Авторизация</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
