--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>War of Krasnogorsk</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 <body>
-    <h1>War of Krasnogorsk</h1>
-    {% block content %}{% endblock %}
+    <h1 class="main_title">War of Krasnogorsk</h1>
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
