--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div>
-        <a href="/login" class="btn btn-warning">
-            Log in
-        </a>
-        <a href="/register" class="btn btn-danger">
-            Register
-        </a>
-    </div>
+    <h2>Вы не авторизованы</h2>
 {% endblock %}
