--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% if current_user.choose_area == False %}
-    <img src="{{ url_for('static', filename='img/1.jpg') }}" class="main_logo">
+{% if not current_user.choose_area %}
+    <img src="{{ url_for('static', filename='img/1.jpg') }}" class="main-logo">
 {% else %}
     <h4>Район выбран</h4>
 {% endif %}
