--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if not current_user.choose_area %}
-    <img src="{{ url_for('static', filename='img/1.jpg') }}" class="main-logo">
+    <img src="{{ url_for('static', filename='img/1.png') }}" class="main-logo">
 {% else %}
     <h4>Район выбран</h4>
 {% endif %}
