--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
+    </style>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex" href="/">
-                    <img src="{{ url_for('static', filename='img/1.jpg') }}" width="100" height="100" class="d-inline-block align-text-top">
+                    <img src="{{ url_for('static', filename='img/1.png') }}" width="160" height="80" class="d-inline-block align-text-top">
                     <h2 class="nav-title d-inline-block">War of Krasnogorsk</h2>
                 </a>
                 <div class="d-flex">
@@ -22,7 +25,7 @@
                             <a class="btn btn-danger" href="/logout">Log out</a>
                         </div>
                     {% else %}
-                        <div>
+                        <div class="navbar-brand">
                             <a class="btn btn-primary" href="/register">Register</a>
                             <a class="btn btn-success" href="/login">Log in</a>
                         </div>
