--- a/templates/register.html
+++ b/templates/register.html
@@ -14,9 +14,9 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.name.label }}<br>
-        {{ form.name(class="form-control") }}<br>
-        {% for error in form.name.errors %}
+        {{ form.username.label }}<br>
+        {{ form.username(class="form-control") }}<br>
+        {% for error in form.username.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
