Rename logo image

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex" href="/">
-                    <img src="{{ url_for('static', filename='img/1.png') }}" width="160" height="80" class="d-inline-block align-text-top">
+                    <img src="{{ url_for('static', filename='img/logo.png') }}" width="160" height="80" class="d-inline-block align-text-top">
                     <h2 class="nav-title d-inline-block">War of Krasnogorsk</h2>
                 </a>
                 <div class="d-flex">
