--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
         <a href="/choose_area/3">Бруски</a>
         <a href="/choose_area/4">Изумрудки</a>
     </p>
-    <img src="{{ url_for('static', filename='img/1.png') }}" class="main-logo">
+    <img src="{{ url_for('static', filename='img/logo.png') }}" class="main-logo">
 {% else %}
     <h4>Район выбран</h4>
 {% endif %}
