--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,8 @@
         <nav class="navbar navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex" href="/">
-                    <img src="{{ url_for('static', filename='img/logo.png') }}" width="160" height="80" class="d-inline-block align-text-top">
+                    <img src="{{ url_for('static', filename='img/logo.png') }}"
+                         width="160" height="80" class="d-inline-block align-text-top">
                     <h2 class="nav-title d-inline-block">War of Krasnogorsk</h2>
                 </a>
                 <div class="d-flex">
@@ -39,5 +40,11 @@
             {% block content %}{% endblock %}
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+            integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+            integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+            crossorigin="anonymous"></script>
 </body>
 </html>
