--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Вы не авторизованы</h2>
+    <div id="carouselExampleFade" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{{ url_for('static', filename='img/area_1.jpg') }}" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('static', filename='img/area_2.jpg') }}" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('static', filename='img/area_3.jpg') }}" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('static', filename='img/area_4.jpg') }}" class="d-block w-100">
+            </div>
+        </div>
+        <a class="carousel-control-prev" type="button" role="button"
+                data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" type="button" role="button"
+                data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </a>
+    </div>
 {% endblock %}
