--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,5 +18,17 @@ header {
     margin-right: 2rem;
 }
 .main-logo {
-    width: 60%;
+    border: 2px solid #000;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+.main-block {
+    padding: 2rem 2rem;
+    border: 2px solid #000;
+    display: inline-block;
+}
+.profile-logo {
+    width: 10%;
+    height: 10%;
+    border: solid 2px rgb(36, 11, 255)
 }
