Аdd a new form - upgrade, edit main.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 {% if current_user.is_authenticated %}
                     <div class="navbar-brand">
                         <a class="btn btn-secondary" href="/">Армия и экономика</a>
-                        <a class="btn btn-secondary" href="/">Рейды</a>
+                        <a class="btn btn-secondary" href="/raid">Рейды</a>
                         <a class="btn btn-secondary" href="/leadersboard">Лидеры</a>
                         <a class="btn btn-secondary" href="/profile">Профиль</a>
                     </div>
