Add Raid table; improve Army & Race, raid template, handlers

--- a/templates/raid.html
+++ b/templates/raid.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 <h3>Напасть на другого игрока</h3>
-<p>*За успешный рейд - вам начисляются деньги и юниты игрока на которого вы напали*</p>
+<p>*За успешный рейд вы получаете часть денег и юнитов игрока, на которого вы напали*</p>
+<p>*В случае победы у вас также есть шанс получить несколько юнитов одной из рас армии
+    противника, которой у вас ещё нет (открыть новую расу)*</p>
+<p>*В любом случае потери будут и у вас, и у вашего оппонента, но у победившего их будет меньше*</p>
 {% if raidform.users.choices|length >= 1 %}
     <form action="" method="post">
         {{ raidform.hidden_tag() }}
@@ -18,6 +21,6 @@
         {{ message }}
     </form>
 {% else %}
-<p>Тут пока не кого нет</p>
+<p>Тут пока никого нет</p>
 {% endif %}
 {% endblock %}
