--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
           <div class="card-body">
             <h5 class="card-title">Чернево - 1</h5>
             <p class="card-text">Основания масса жителей чернево-1 - это бомжи.
-                Выбери этот район и почувствую мощь среди бомжей</p>
+                Выбери этот район и почувствуй мощь среди остальных</p>
             <a href="/choose_area/1" class="btn btn-primary">Выбрать!</a>
           </div>
         </div>
